# MyPlayer

./: AVDemuxer.cpp  AVDemuxer.h  AVPlayer.cpp  AVPlayer.h  AVQueue.h  AppPaths.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  CodecWrapper.cpp  CodecWrapper.h  FaceBoxDrawer.cpp  FaceBoxDrawer.h  FaceDatabase.cpp  FaceDatabase.h  FaceDetectionRunner.cpp  FaceDetectionRunner.h  FaceRecognitionRunner.cpp  FaceRecognitionRunner.h  FaceSampleImporter.cpp  FaceSampleImporter.h  FrameFilter.cpp  FrameFilter.h  ImageToImageOnnxRunner.cpp  ImageToImageOnnxRunner.h  LogRedirector.h  OnnxFrameProcessor.cpp  OnnxFrameProcessor.h  OpenGLVideoWidget.cpp  OpenGLVideoWidget.h  PacketQueue.cpp  PacketQueue.h  QAVPacket.cpp  QAVPacket.h  README.md  SyncTimer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+1 more)
